* [Bug 1205] Add ntpd --usepcc and --pccfreq options on Windows
* [Bug 1215] unpeer by association ID
* [Bug 1225] Broadcast address miscalculated on Windows 4.2.5p180
* [Bug 1229] autokey segfaults in cert_install().
* Use a union for structs sockaddr, sockaddr_storage, sockaddr_in, and
  sockaddr_in6 to remove casts and enable type checking.  Collapse
  some previously separate IPv4/IPv6 paths into a single codepath.
(4.2.5p181) 2009/06/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1206] Required compiler changes for Windows
* [Bug 1084] PPSAPI for ntpd on Windows with DLL backends
* [Bug 1204] Unix-style refclock device paths on Windows
* [Bug 1205] partial fix, disable RDTSC use by default on Windows
* [Bug 1208] decodenetnum() buffer overrun on [ with no ]
* [Bug 1211] keysdir free()d twice #ifdef DEBUG
* Enable ONCORE, ARCRON refclocks on Windows (untested)
(4.2.5p180) 2009/05/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1200] Enable IPv6 in Windows port
* Lose FLAG_FIXPOLL, from Dave Mills.
(4.2.5p179) 2009/05/23 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1041] xmt -> aorg timestamp cleanup from Dave Mills,
  reported by Dave Hart.
* [Bug 1193] Compile error: conflicting types for emalloc.
* [Bug 1196] VC6 winsock2.h does not define SO_EXCLUSIVEADDRUSE.
* Leap/expire cleanup from Dave Mills.
(4.2.5p178) 2009/05/21 Released by Harlan Stenn <stenn@ntp.org>
* Provide erealloc() and estrdup(), a la emalloc().
* Improve ntp.conf's parser error messages.
* [Bug 320] "restrict default ignore" does not affect IPv6.
* [Bug 1192] "restrict -6 ..." reports a syntax error.
(4.2.5p177) 2009/05/18 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7)
* [Bug 1174] nmea_shutdown assumes that nmea has a unit assigned
* [Bug 1190] NMEA refclock fudge flag4 1 obscures position in timecode
* Update NMEA refclock documentation in html/drivers/driver20.html
(4.2.5p176) 2009/05/13 Released by Harlan Stenn <stenn@ntp.org>